--- a/index.html
+++ b/index.html
@@ -12,95 +12,152 @@
 </head>
 
 <body>
-  <div id="tower-container">
-    <div id="kokeshi-tower"></div>
+  <div id="app">
+    <div id="leaderboard-panel">
+      <h2>Leaderboard</h2>
+      <ul id="leaderboard"></ul>
+    </div>
+    <div id="tower-panel">
+      <h1>Kokeshi Tower</h1>
+      <div id="kokeshi-tower"></div>
+    </div>
   </div>
+
+  <!-- User popup -->
+  <div id="user-popup">
+    <span id="popup-close">&times;</span>
+    <h3 id="popup-name"></h3>
+    <p id="popup-height"></p>
+    <a id="popup-sns" href="#" target="_blank"></a>
+  </div>
+
 
   <script>
     // Backendlessの設定
     const APP_ID = "F836FFE2-AA5B-8A23-FF17-4DA921B9C900"; // BackendlessアプリID
     const API_KEY = "2AD3A779-0802-4F6E-BC18-ED592E6BEAC1"; // REST APIキー
     //const objectId = "791E7404-AC37-4598-9B04-044FD5A2C9F9";
+    const DATABASE_URL = `https://api.backendless.com/${APP_ID}/${API_KEY}/data/tower`
 
-    // タワーを構築する関数 (遅延表示を考慮)
-    async function fetchAndBuildKokeshiTower(objectId) {
-      console.log("Fetching data for objectId:", objectId); // ここで確認
+    const leaderboardPanel = document.getElementById("leaderboard");
+    const towerContainer = document.getElementById("kokeshi-tower");
+    const popup = document.getElementById("user-popup");
+    const popupName = document.getElementById("popup-name");
+    const popupHeight = document.getElementById("popup-height");
+    const popupSns = document.getElementById("popup-sns");
+    const popupClose = document.getElementById("popup-close");
 
-      const towerContainer = document.getElementById('tower-container');
-      console.log("Tower container:", towerContainer);
-      if (!towerContainer) {
-        console.error("Error: tower-container が見つかりません！");
-      }
+    const BACKGROUND_THRESHOLDS = [
+  { limit: 100, className: "background-earth" },
+  { limit: 300, className: "background-tokyo-tower" },
+  { limit: 600, className: "background-mt-fuji" },
+  { limit: Infinity, className: "background-space" },
+];
 
-      const kokeshiTower = document.getElementById('kokeshi-tower');
-
-      // Backendlessからデータを取得
+    // Fetch leaderboard data and build leaderboard
+    async function fetchLeaderboard() {
       try {
-        const response = await fetch(`https://api.backendless.com/${APP_ID}/${API_KEY}/data/${TABLE_NAME}/${objectId}`);
-        console.log("API Response:", response); // ここでレスポンスの状態を確認
+        const response = await fetch(DATABASE_URL, {
+          method: "GET",
+          headers: {
+            "Content-Type": "application/json",
+          },
+        });
 
         if (!response.ok) {
-          throw new Error(`HTTP error! Status: ${response.status}`);
+          throw new Error(`Error fetching leaderboard: ${response.statusText}`);
         }
 
         const data = await response.json();
-        console.log("Received data:", data); // データの中身を確認
+        buildLeaderboard(data);
       } catch (error) {
-        console.error("Error fetching data:", error); // エラーの内容を表示
+        console.error("Failed to fetch leaderboard:", error);
       }
-
-
-      // こけしの総数を取得
-      const totalKokeshi = data.kokeshi_count;
-
-      // タワーをクリア
-      kokeshiTower.innerHTML = '';
-
-      // こけしの要素を作成 (非表示状態で追加)
-      for (let i = 0; i < totalKokeshi; i++) {
-        const kokeshi = document.createElement('div');
-        kokeshi.classList.add('kokeshi');
-        kokeshi.dataset.index = i; // 各こけしにインデックスを付与
-        kokeshiTower.appendChild(kokeshi);
-      }
-
-      // 初期スクロール位置を最下部に設定
-      towerContainer.scrollTop = towerContainer.scrollHeight;
-
-      // スクロールイベントを登録
-      towerContainer.addEventListener('scroll', () => handleScroll(totalKokeshi));
     }
 
-    // 背景をスクロールに応じて変更し、こけしを表示する関数
-    function handleScroll(totalKokeshi) {
-      const towerContainer = document.getElementById('tower-container');
-      const kokeshiTower = document.getElementById('kokeshi-tower');
-      const scrollHeight = towerContainer.scrollHeight - towerContainer.clientHeight;
-      const scrollRatio = towerContainer.scrollTop / scrollHeight;
+    function buildLeaderboard(data) {
+      leaderboardPanel.innerHTML = ""; // Clear existing leaderboard
+      data
+        .sort((a, b) => b.stuck - a.stuck) // Sort by stuck in descending order
+        .forEach((user) => {
+          const li = document.createElement("li");
+          li.innerHTML = `
+        <img src="${user.pfp}" alt="${user.username}'s PFP">
+        <span>${user.username}</span>
+      `;
+          li.addEventListener("click", () => showPopup(user));
+          leaderboardPanel.appendChild(li);
+        });
+    }
 
-      // 背景を変更
-      if (scrollRatio < 0.33) {
-        towerContainer.className = 'bg-earth';
-      } else if (scrollRatio < 0.66) {
-        towerContainer.className = 'bg-sky';
-      } else {
-        towerContainer.className = 'bg-space';
+    // Build kokeshi tower
+    function buildKokeshiTower(count) {
+      towerContainer.innerHTML = ""; // Clear existing tower
+      for (let i = 0; i < count; i++) {
+        const kokeshi = document.createElement("div");
+        kokeshi.classList.add("kokeshi");
+
+        const face = document.createElement("div");
+        face.classList.add("kokeshi-face");
+
+        kokeshi.appendChild(face);
+        towerContainer.appendChild(kokeshi);
       }
 
-      // 表示するこけしを計算
-      const visibleCount = Math.ceil((towerContainer.scrollTop + towerContainer.clientHeight) / 52); // 1こけしの高さ + margin
+      updateBackground(count);
+    }
 
-      // 遅延表示 (表示範囲内のこけしのみ)
-      const kokeshiElements = kokeshiTower.children;
-      for (let i = 0; i < totalKokeshi; i++) {
-        const kokeshi = kokeshiElements[i];
-        if (i < visibleCount) {
-          kokeshi.classList.add('visible'); // 表示
-        } else {
-          kokeshi.classList.remove('visible'); // 非表示
+    function updateBackground(count) {
+  towerPanel.className = BACKGROUND_THRESHOLDS.find(
+    (threshold) => count <= threshold.limit
+  ).className;
+}
+
+    // Fetch stuck data and build tower
+    async function fetchAndBuildKokeshiTower(objectId) {
+      try {
+        const response = await fetch(`${DATABASE_URL}/${objectId}`, {
+          method: "GET",
+          headers: {
+            "Content-Type": "application/json",
+          },
+        });
+
+        if (!response.ok) {
+          throw new Error(`Error fetching data: ${response.statusText}`);
         }
+
+        const data = await response.json();
+        buildKokeshiTower(data.kokeshi_count);
+      } catch (error) {
+        console.error("Failed to fetch stuck data:", error);
       }
     }
+
+    // Show popup
+    function showPopup(user) {
+      popupName.textContent = user.username;
+      popupHeight.textContent = `Height: ${user.kokeshi_count}`;
+      popupSns.href = user.sns || "#";
+      popupSns.textContent = user.sns ? "Visit SNS" : "No SNS available";
+      popupSns.style.display = user.sns ? "block" : "none";
+
+      popup.classList.remove("hide");
+      popup.classList.add("show");
+    }
+
+    // Close popup
+    popupClose.addEventListener("click", () => {
+      popup.classList.remove("show");
+      popup.classList.add("hide");
+
+      popup.addEventListener("animationend", () => {
+        popup.style.display = "none";
+      }, { once: true });
+    });
+
+    // Example usage
+    fetchLeaderboard();
 
     // 初期化 (特定の objectId を指定)
     const OBJECT_ID = "791E7404-AC37-4598-9B04-044FD5A2C9F9"; // 対象の objectId を指定
